[gd_scene load_steps=10 format=2]

[ext_resource path="res://Granny/Book.gd" type="Script" id=1]
[ext_resource path="res://Granny/Recipe.png" type="Texture" id=2]
[ext_resource path="res://Granny/Grandma Sprites.png" type="Texture" id=3]
[ext_resource path="res://Granny/gran_hm.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 90, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 4 )

[sub_resource type="CircleShape2D" id=3]
radius = 7.0

[sub_resource type="Animation" id=4]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.396078, 0.858824, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Book" type="Node2D"]
z_index = -1
script = ExtResource( 1 )

[node name="RecipeSprite" type="Sprite" parent="."]
position = Vector2( 23.6663, -23.0516 )
z_index = 9
z_as_relative = false
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.808415, 0.955214, 1, 1 )
texture = ExtResource( 3 )
vframes = 8
hframes = 11
frame = 39

[node name="glow_trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="glow_trigger"]
position = Vector2( 0, -86.4 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/glow = SubResource( 4 )
anims/normal = SubResource( 5 )

[node name="hm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true
[connection signal="body_entered" from="glow_trigger" to="." method="_on_glow_trigger_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
